Add image to jerk_chicken.html

--- a/recipes/jerk_chicken.html
+++ b/recipes/jerk_chicken.html
@@ -1,1 +1,3 @@
 <h1>Jerk Chicken</h1>
+
+<img src="https://www.foodandwine.com/thmb/AbaDjGVLSIk8MP53z0ZVTPgv88M=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/jamaican-jerk-chicken-FT-RECIPE0918-eabbd55da31f4fa9b74367ef47464351.jpg" alt="Jerk chicken">
