--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-    <html lang="en">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Odin Recipes</title>
     </head>
 
 
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="recipes/jerk_chicken.html">Jerk Chicken</a>
+        <ul>
+            <li><a href="recipes/jerk_chicken.html">Jerk Chicken</a></li>
+            <li><a href="recipes/baked_chicken_wing.html"></a></li>
+            <li><a href="recipes/roast_beef.html"></a></li>
+        </ul>
     </body>
 </html>
