--- a/recipes/baked_chicken_wings.html
+++ b/recipes/baked_chicken_wings.html
@@ -9,5 +9,6 @@
 
     <body>
         <h1>Baked Chicken Wings</h1>
+        <img src="https://www.allrecipes.com/recipe/187822/baked-chicken-wings/#" alt="Baked Chicken Wings">
     </body>
 </html>
