Add desc to recipes/baked_chicken_wings.html

--- a/recipes/baked_chicken_wings.html
+++ b/recipes/baked_chicken_wings.html
@@ -10,5 +10,8 @@
     <body>
         <h1>Baked Chicken Wings</h1>
         <img src="https://www.allrecipes.com/recipe/187822/baked-chicken-wings/#" alt="Baked Chicken Wings">
+
+        <h2>Description</h2>
+        <p>These baked chicken wings are easy, crispy, and delicious! I normally serve them with a side of rice, chicken gravy, and a vegetable or salad.</p>
     </body>
 </html>
