Add ingred to recipes/baked_chicken_wings.html

--- a/recipes/baked_chicken_wings.html
+++ b/recipes/baked_chicken_wings.html
@@ -13,5 +13,15 @@
 
         <h2>Description</h2>
         <p>These baked chicken wings are easy, crispy, and delicious! I normally serve them with a side of rice, chicken gravy, and a vegetable or salad.</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>3 tablespoons olive oil</li>
+            <li>3 cloves garlic, pressed</li>
+            <li>2 teaspoons chili powder</li>
+            <li>1 teaspoon garlic powder</li>
+            <li>salt and ground black pepper to taste</li>
+            <li>10 chicken wings</li>
+        </ul>
     </body>
 </html>
