Add steps to recipes/baked_chicken_wings.html

--- a/recipes/baked_chicken_wings.html
+++ b/recipes/baked_chicken_wings.html
@@ -23,5 +23,12 @@
             <li>salt and ground black pepper to taste</li>
             <li>10 chicken wings</li>
         </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Combine the oil and seasonings in a bag and shake to blend.</li>
+            <li>Add the chicken wings to the bag, seal and shake to coat.</li>
+            <li>Arrange the wings on a baking sheet and bake until crisp and cooked through.</li>
+        </ol>
     </body>
 </html>
