Add image to recipes/roast_beef

--- a/recipes/roast_beef.html
+++ b/recipes/roast_beef.html
@@ -9,5 +9,6 @@
 
     <body>
         <h1>Roast Beef</h1>
+        <img src="https://www.allrecipes.com/thmb/zkQFQ2qagS4nTS45vDvi2y4vQ_U=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/42176-all-american-roast-beef-DDMFS-4x3-88f7f283e7814478bae7612f947faebb.jpg" alt="Roast Beef">
     </body>
 </html>
