Add ingredients to recipes/roast_beef.html

--- a/recipes/roast_beef.html
+++ b/recipes/roast_beef.html
@@ -13,5 +13,13 @@
 
         <h2>Description</h2>
         <p>Roast beef made with round roast cooked to your liking using an easy, weight-based formula guide for perfect results every time. Thinly slice the beef and serve with gravy, mashed potatoes, and your veggie of choice for a special family meal. Use the juices from the roast beef in your gravy.</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>3 pounds beef eye of round roast, at room temperature</li>
+            <li>½ teaspoon kosher salt, or more to taste</li>
+            <li>½ teaspoon garlic powder, or more to taste</li>
+            <li>¼ teaspoon freshly ground black pepper, or more to taste</li>
+        </ul>
     </body>
 </html>
