Add steps to recipes/roast_beef.html

--- a/recipes/roast_beef.html
+++ b/recipes/roast_beef.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Odin Recipes</title>
     </head>
 
 
@@ -21,5 +21,19 @@
             <li>½ teaspoon garlic powder, or more to taste</li>
             <li>¼ teaspoon freshly ground black pepper, or more to taste</li>
         </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Gather all ingredients.</li>
+            <li>Preheat oven to 375 degrees F (190 degrees C).</li>
+            <li>Make sure roast is at room temperature. Tie roast at 3-inch intervals with cotton twine; this helps it from drying out
+            and allows it to cook more evenly. Place roast on a rack in a baking pan.</li>
+            <li>Mix together salt, garlic powder, and pepper in a small bowl. Rub seasoning mixture into the meat.</li>
+            <li>Place in the preheated oven and roast for 60 minutes, or 20 minutes per pound if your roast is larger or smaller. An
+            instant-read thermometer inserted into the center should read 120 to 125 degrees F (49 to 52 degrees C).</li>
+            <li>Remove from the oven and transfer to a cutting board. Cover loosely with foil, and let rest so juices can redistribute,
+            15 to 20 minutes.</li>
+            <li>Slice and serve.</li>
+        </ol>
     </body>
 </html>
