--- a/recipes/baked_chicken_wings.html
+++ b/recipes/baked_chicken_wings.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1>Baked Chicken Wings</h1>
-        <img src="https://www.allrecipes.com/recipe/187822/baked-chicken-wings/#" alt="Baked Chicken Wings">
+        <img src="https://www.allrecipes.com/thmb/-mc543U30iPrq74lJKEVCpFSXwY=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-187822-baked-chicken-wings-4x3-5c7b4624c8554f3da5aabb7d3a91a209.jpg" alt="Baked Chicken Wings">
 
         <h2>Description</h2>
         <p>These baked chicken wings are easy, crispy, and delicious! I normally serve them with a side of rice, chicken gravy, and a vegetable or salad.</p>
