--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
         <ul>
             <li><a href="recipes/jerk_chicken.html">Jerk Chicken</a></li>
-            <li><a href="recipes/baked_chicken_wings.html"></a></li>
-            <li><a href="recipes/roast_beef.html"></a></li>
+            <li><a href="recipes/baked_chicken_wings.html">Baked Chicken Wings</a></li>
+            <li><a href="recipes/roast_beef.html">Roast Beef</a></li>
         </ul>
     </body>
 </html>
