Add styling to all pages
Div tags were created and classes were defined on html
Css was used to add styling to class and elements

--- a/recipes/baked_chicken_wings.html
+++ b/recipes/baked_chicken_wings.html
@@ -4,32 +4,38 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Odin Recipes</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
     </head>
 
 
     <body>
         <h1>Baked Chicken Wings</h1>
-        <img src="https://www.allrecipes.com/thmb/-mc543U30iPrq74lJKEVCpFSXwY=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-187822-baked-chicken-wings-4x3-5c7b4624c8554f3da5aabb7d3a91a209.jpg" alt="Baked Chicken Wings">
+        <img class="title-pic" src="https://www.allrecipes.com/thmb/-mc543U30iPrq74lJKEVCpFSXwY=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-187822-baked-chicken-wings-4x3-5c7b4624c8554f3da5aabb7d3a91a209.jpg" alt="Baked Chicken Wings">
 
-        <h2>Description</h2>
-        <p>These baked chicken wings are easy, crispy, and delicious! I normally serve them with a side of rice, chicken gravy, and a vegetable or salad.</p>
+        <div class="description">
+            <h2>Description</h2>
+            <p>These baked chicken wings are easy, crispy, and delicious! I normally serve them with a side of rice, chicken gravy, and a vegetable or salad.</p>
+        </div>
 
-        <h2>Ingredients</h2>
-        <ul>
-            <li>3 tablespoons olive oil</li>
-            <li>3 cloves garlic, pressed</li>
-            <li>2 teaspoons chili powder</li>
-            <li>1 teaspoon garlic powder</li>
-            <li>salt and ground black pepper to taste</li>
-            <li>10 chicken wings</li>
-        </ul>
+        <div class="ingredients">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>3 tablespoons olive oil</li>
+                <li>3 cloves garlic, pressed</li>
+                <li>2 teaspoons chili powder</li>
+                <li>1 teaspoon garlic powder</li>
+                <li>salt and ground black pepper to taste</li>
+                <li>10 chicken wings</li>
+            </ul>
+        </div>
 
-        <h2>Steps</h2>
-        <ol>
-            <li>Combine the oil and seasonings in a bag and shake to blend.</li>
-            <li>Add the chicken wings to the bag, seal and shake to coat.</li>
-            <li>Arrange the wings on a baking sheet and bake until crisp and cooked through.</li>
-        </ol>
+        <div class="steps">
+            <h2>Steps</h2>
+            <ol>
+                <li>Combine the oil and seasonings in a bag and shake to blend.</li>
+                <li>Add the chicken wings to the bag, seal and shake to coat.</li>
+                <li>Arrange the wings on a baking sheet and bake until crisp and cooked through.</li>
+            </ol>
+        </div>
     </body>
 </html>
