--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 
     <body>
         <h1>Odin Recipes</h1>
-
-        <ul>
-            <li><a href="recipes/jerk_chicken.html">Jerk Chicken</a></li>
-            <li><a href="recipes/baked_chicken_wings.html">Baked Chicken Wings</a></li>
-            <li><a href="recipes/roast_beef.html">Roast Beef</a></li>
-        </ul>
+        
+        <div class="navbar">
+            <ul>
+                <li><a href="recipes/jerk_chicken.html">Jerk Chicken</a></li>
+                <li><a href="recipes/baked_chicken_wings.html">Baked Chicken Wings</a></li>
+                <li><a href="recipes/roast_beef.html">Roast Beef</a></li>
+            </ul>
+        </div>
     </body>
 </html>
