--- a/recipes/roast_beef.html
+++ b/recipes/roast_beef.html
@@ -4,37 +4,44 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Odin Recipes</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
     </head>
 
 
     <body>
         <h1>Roast Beef</h1>
-        <img src="https://www.allrecipes.com/thmb/zkQFQ2qagS4nTS45vDvi2y4vQ_U=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/42176-all-american-roast-beef-DDMFS-4x3-88f7f283e7814478bae7612f947faebb.jpg" alt="Roast Beef">
 
-        <h2>Description</h2>
-        <p>Roast beef made with round roast cooked to your liking using an easy, weight-based formula guide for perfect results every time. Thinly slice the beef and serve with gravy, mashed potatoes, and your veggie of choice for a special family meal. Use the juices from the roast beef in your gravy.</p>
+        <img class="title-pic" src="https://www.allrecipes.com/thmb/zkQFQ2qagS4nTS45vDvi2y4vQ_U=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/42176-all-american-roast-beef-DDMFS-4x3-88f7f283e7814478bae7612f947faebb.jpg" alt="Roast Beef">
 
-        <h2>Ingredients</h2>
-        <ul>
-            <li>3 pounds beef eye of round roast, at room temperature</li>
-            <li>½ teaspoon kosher salt, or more to taste</li>
-            <li>½ teaspoon garlic powder, or more to taste</li>
-            <li>¼ teaspoon freshly ground black pepper, or more to taste</li>
-        </ul>
+        <div class="description">
+            <h2>Description</h2>
+            <p>Roast beef made with round roast cooked to your liking using an easy, weight-based formula guide for perfect results every time. Thinly slice the beef and serve with gravy, mashed potatoes, and your veggie of choice for a special family meal. Use the juices from the roast beef in your gravy.</p>
+        </div>
 
-        <h2>Steps</h2>
-        <ol>
-            <li>Gather all ingredients.</li>
-            <li>Preheat oven to 375 degrees F (190 degrees C).</li>
-            <li>Make sure roast is at room temperature. Tie roast at 3-inch intervals with cotton twine; this helps it from drying out
-            and allows it to cook more evenly. Place roast on a rack in a baking pan.</li>
-            <li>Mix together salt, garlic powder, and pepper in a small bowl. Rub seasoning mixture into the meat.</li>
-            <li>Place in the preheated oven and roast for 60 minutes, or 20 minutes per pound if your roast is larger or smaller. An
-            instant-read thermometer inserted into the center should read 120 to 125 degrees F (49 to 52 degrees C).</li>
-            <li>Remove from the oven and transfer to a cutting board. Cover loosely with foil, and let rest so juices can redistribute,
-            15 to 20 minutes.</li>
-            <li>Slice and serve.</li>
-        </ol>
+        <div class="ingredients">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>3 pounds beef eye of round roast, at room temperature</li>
+                <li>½ teaspoon kosher salt, or more to taste</li>
+                <li>½ teaspoon garlic powder, or more to taste</li>
+                <li>¼ teaspoon freshly ground black pepper, or more to taste</li>
+            </ul>
+        </div>
+
+        <div class="steps">
+            <h2>Steps</h2>
+            <ol>
+                <li>Gather all ingredients.</li>
+                <li>Preheat oven to 375 degrees F (190 degrees C).</li>
+                <li>Make sure roast is at room temperature. Tie roast at 3-inch intervals with cotton twine; this helps it from drying out
+                and allows it to cook more evenly. Place roast on a rack in a baking pan.</li>
+                <li>Mix together salt, garlic powder, and pepper in a small bowl. Rub seasoning mixture into the meat.</li>
+                <li>Place in the preheated oven and roast for 60 minutes, or 20 minutes per pound if your roast is larger or smaller. An
+                instant-read thermometer inserted into the center should read 120 to 125 degrees F (49 to 52 degrees C).</li>
+                <li>Remove from the oven and transfer to a cutting board. Cover loosely with foil, and let rest so juices can redistribute,
+                15 to 20 minutes.</li>
+                <li>Slice and serve.</li>
+            </ol>
+        </div>
     </body>
 </html>
